# BlockBash

./: .gitignore  Cargo.toml  README.md
src/: app.rs  handler.rs  lib.rs  main.rs  root.rs  tabs.rs  theme.rs  ui.rs  widget.rs
src/tabs/: about.rs  dashboard.rs  weather.rs
