[package]
name = "blockbash"
version = "0.1.0"
authors = ["Harun <master.harun@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full", "parking_lot"] }
futures = "0.3.30"
clap = "4.4.18"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = { version = "0.26.0", features = ["widget-calendar"] }
anchor-lang = "0.29.0"
anchor-spl = "0.29.0" 
anchor-client={version="0.29.0", features=["async"]}
rust_decimal = { version = "1.34.2", features = ["maths"] }
itertools = "0.12.1"
palette = "0.7.4"
time = "0.3.34"
anyhow = "1.0.79"
chrono = "0.4.33"
